--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,19 @@
     <h1>Linux Command Cheatsheet</h1>
   </header>
   <main id="cheatsheet"></main>
+  <p>
+    
+    when using ssh
+    git clone git@github.com:HapeGitHub/linux-cheatsheet-server-setup.git
+    
+    or (if using HTTPS, no SSH needed):
+    git clone https://github.com/HapeGitHub/linux-cheatsheet-server-setup.git
+  </p>
 
+
+
+
+  
   <script>
     fetch('/api/cheatsheet')
       .then(response => response.json())
