--- a/templates/index.html
+++ b/templates/index.html
@@ -10,12 +10,7 @@
   </header>
   
   <p>
-    
-    when using ssh
-    git clone git@github.com:HapeGitHub/linux-cheatsheet-server-setup.git
-    
-    or (if using HTTPS, no SSH needed):
-    git clone https://github.com/HapeGitHub/linux-cheatsheet-server-setup.git
+  XXXXXX    
   </p>
 
 
